--- a/src/app/remote-entry/components/request-detail/request-detail.html
+++ b/src/app/remote-entry/components/request-detail/request-detail.html
@@ -1,6 +1,6 @@
 <div class="">
   <div class="bg-gray-200 p-2 flex items-center gap-2 mb-4">
-    <span class="text-black font-semibold">Request-Detail</span>
+    <span class="text-black font-semibold">Line-Detail</span>
     <button
       mat-raised-button
       color="primary"
@@ -14,20 +14,16 @@
   <div class="userCreateForm p-2">
     <form [formGroup]="requestForm">
       <mat-form-field appearance="fill" class="form-field">
-        <mat-label>Description</mat-label>
-        <input matInput formControlName="description" />
+        <mat-label>Quantity</mat-label>
+        <input matInput type="number" formControlName="quantity" />
       </mat-form-field>
 
       <mat-form-field appearance="fill" class="form-field">
-        <mat-label>Justification</mat-label>
-        <input matInput formControlName="justification" />
-      </mat-form-field>
-
-      <mat-form-field appearance="fill" class="form-field">
-        <mat-label>Delivery Mode</mat-label>
-        <mat-select formControlName="deliveryMode">
-          <mat-option [value]="'Mail'"> Mail </mat-option>
-          <mat-option [value]="'pickUp'"> PickUp </mat-option>
+        <mat-label>Product</mat-label>
+        <mat-select formControlName="product">
+          <mat-option *ngFor="let product of productList" [value]="product">
+            {{ product.name }}
+          </mat-option>
         </mat-select>
       </mat-form-field>
 
@@ -35,25 +31,18 @@
         <button
           mat-raised-button
           color="primary"
-          (click)="handleEditDetails()"
           type="button"
+          (click)="handleEdit()"
         >
           Edit
         </button>
-        <button
-          mat-raised-button
-          color="primary"
-          type="button"
-          (click)="handleSubmitReview()"
-        >
-          Submit Review
-        </button>
+
         <button
           mat-raised-button
           color="danger"
-          [ngClass]="'bg-red-600! text-white! '"
-          type="submit"
-          (click)="handleDeleteRequest()"
+          class="bg-red-600 text-white"
+          type="button"
+          (click)="handleDelete()"
         >
           Delete
         </button>
