--- a/src/app/remote-entry/components/review/review.html
+++ b/src/app/remote-entry/components/review/review.html
@@ -1,6 +1,6 @@
 <div class="">
   <div class="bg-gray-200 p-2 flex items-center gap-2 mb-4">
-    <span class="text-black font-semibold">Requests-List</span>
+    <span class="text-black font-semibold">Review-List</span>
   </div>
   <div class="w-full overflow-x-auto bg-white rounded-lg shadow-md p-4">
     <table
@@ -33,8 +33,9 @@
                 class="cursor-pointer"
                 mat-raised-button
                 color="primary"
+                class="!text-center"
               >
-                Approve
+                <mat-icon> thumb_up</mat-icon>
               </button>
             </div>
           </td>
